tests/miniJava/neg/001293_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = new int if 0 ] ; } }
